--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,9 @@ GoogleService-Info.plist
 
 #Assets
 /assets/
+
+# Firebase configuration files
+lib/firebase_options.dart
+ios/Runner/GoogleService-Info.plist
+macos/Runner/GoogleService-Info.plist
+android/app/google-services.json
